Implemented a mainmenustate that draws a red rectangle

--- a/FireEscape/FireEscape.vcxproj
+++ b/FireEscape/FireEscape.vcxproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_menu_state.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libpng16-16.dll" />
@@ -128,6 +129,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h" />
+    <ClInclude Include="game_state.h" />
+    <ClInclude Include="main_menu_state.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
