--- a/FireEscape/FireEscape.vcxproj.filters
+++ b/FireEscape/FireEscape.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="engine.cpp">
       <Filter>Source Files\core</Filter>
     </ClCompile>
+    <ClCompile Include="main_menu_state.cpp">
+      <Filter>Source Files\core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="libpng16-16.dll" />
@@ -33,6 +36,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h">
+      <Filter>Source Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="game_state.h">
+      <Filter>Source Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="main_menu_state.h">
       <Filter>Source Files\core</Filter>
     </ClInclude>
   </ItemGroup>
