--- a/FireEscape/FireEscape.vcxproj.filters
+++ b/FireEscape/FireEscape.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="tile.h">
       <Filter>Source Files\util</Filter>
     </ClInclude>
+    <ClInclude Include="coord.h">
+      <Filter>Source Files\util</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
