Implemented wandering people that do nothing

--- a/FireEscape/FireEscape.vcxproj
+++ b/FireEscape/FireEscape.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_menu_state.cpp" />
+    <ClCompile Include="person.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="tmxparser.cpp" />
     <ClCompile Include="placement_state.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="engine.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="main_menu_state.h" />
+    <ClInclude Include="person.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="tmxparser.h" />
     <ClInclude Include="coord.h" />
