--- a/FireEscape/FireEscape.vcxproj.filters
+++ b/FireEscape/FireEscape.vcxproj.filters
@@ -18,9 +18,12 @@
     </Filter>
     <Filter Include="Source Files\map parsing">
       <UniqueIdentifier>{94ce3449-509c-4434-a5cd-1d22c7f597ca}</UniqueIdentifier>
-	</Filter>
+    </Filter>
     <Filter Include="Source Files\util">
       <UniqueIdentifier>{71d67b2a-da73-4574-a05e-8ef97f5cf6eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ai">
+      <UniqueIdentifier>{0022a722-15cc-4499-9002-99452906a9db}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -32,7 +35,7 @@
     </ClCompile>
     <ClCompile Include="main_menu_state.cpp">
       <Filter>Source Files\core</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="base64.cpp">
       <Filter>Source Files\map parsing</Filter>
     </ClCompile>
@@ -47,6 +50,9 @@
     </ClCompile>
     <ClCompile Include="simulation_state.cpp">
       <Filter>Source Files\core</Filter>
+    </ClCompile>
+    <ClCompile Include="person.cpp">
+      <Filter>Source Files\ai</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -64,7 +70,7 @@
     </ClInclude>
     <ClInclude Include="main_menu_state.h">
       <Filter>Source Files\core</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="base64.h">
       <Filter>Source Files\map parsing</Filter>
     </ClInclude>
@@ -88,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="coord.h">
       <Filter>Source Files\util</Filter>
+    </ClInclude>
+    <ClInclude Include="person.h">
+      <Filter>Source Files\ai</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
