--- a/FireEscape/FireEscape.vcxproj.filters
+++ b/FireEscape/FireEscape.vcxproj.filters
@@ -60,6 +60,8 @@
     <None Include="SDL2.dll" />
     <None Include="SDL2_image.dll" />
     <None Include="zlib1.dll" />
+    <None Include="libfreetype-6.dll" />
+    <None Include="SDL2_ttf.dll" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h">
