Added sound library

--- a/FireEscape/FireEscape.vcxproj.filters
+++ b/FireEscape/FireEscape.vcxproj.filters
@@ -64,6 +64,7 @@
     <None Include="SDL2_image.dll" />
     <None Include="zlib1.dll" />
     <None Include="libfreetype-6.dll" />
+    <None Include="SDL2_mixer.dll" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h">
